# ubr1_preview

./: README.md
ubr1_gazebo/launch/: simulation_demo.launch
ubr1_gazebo/worlds/: demo_world.world  home.world
ubr1_navigation/launch/: gmapping.launch  navigate_demo.launch
ubr1_navigation/launch/includes/: amcl.launch.xml  gmapping.launch.xml
ubr1_navigation/maps/: home_demo.pgm  home_demo.yaml
ubr_pickup/: CMakeLists.txt  package.xml
ubr_pickup/config/: default_controllers.yaml
ubr_pickup/launch/: ubr_pick.launch
ubr_pickup/launch/includes/: obstacles.launch.xml
ubr_pickup/rviz/: navigation.rviz
ubr_pickup/scripts/: pickup.py
ubr_teleop/launch/: ubr_keyboard.launch
ubr_teleop/param/: mux.yaml
